# giacometti

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
crates/giacometti/: Cargo.toml
crates/giacometti/src/: backends.rs  git.rs  lib.rs  main.rs  policy.rs  release.rs  tests.rs
crates/giacometti/src/backends/: git.rs  github_api.rs  gitoxide.rs  shell.rs  types.rs  uv.rs
crates/giacometti/src/backends/git/: github_api.rs  gitoxide.rs  release.rs  shell.rs  types.rs
crates/giacometti/src/backends/uv/: rust_crate.rs  shell.rs  types.rs
crates/giacometti/src/git/: add.rs  commit.rs  push.rs  release.rs  reset.rs  rev_parse.rs  tag.rs
crates/giacometti/src/tests/: git.rs  mock.rs
crates/giacometti/src/tests/git/: rev_parse.rs
crates/giacometti/src/tests/mock/: git.rs
docs/: JOURNAL.md
docs/journal/: 2025-01-25-uv-backends-4.md
